--- a/less/blocks/care.less
+++ b/less/blocks/care.less
@@ -18,12 +18,12 @@
 }
 
 .care-item__title {
-  padding-top: 30px;
+  padding-top: 26px;
   font-weight: bold;
 }
 
 .care-item__description {
-  padding-top: 5px;
+  padding-top: 0;
   padding-left: 10px;
   padding-right: 10px;
   font-family: @arial;
