--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -1,19 +1,22 @@
 .chains-stores {
-  padding-top: 180px;
+  padding-top: 191px;
   position: relative;
   &:before {
     position: absolute;
-    width: 90%;
+    width: 94%;
     display: block;
     content: '';
-    top: 120px;
-    left: 5%;
+    top: 91px;
+    left: 3%;
     background-color: #EFEFEF;
-    height: 55%;
+    height: 66%;
     border-radius: 5px;
   }
 }
 
+.chains-stores__top{
+  padding-bottom: 30px;
+}
 .chains-stores__opening {
   padding-top: 20px;
   font-family: Arial;
@@ -31,8 +34,8 @@
 .chains-stores__video-title {
   position: absolute;
   display: block;
-  bottom: 50px;
-  left: 140px;
+  bottom: 36px;
+  left: 133px;
   width: 180px;
   font-size: 18px;
   font-weight: bold;
