--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -1,5 +1,5 @@
 .essence{
-  padding-top: 60px;
+  padding-top: 68px;
   padding-bottom: 20px;
 }
 .essence__qote{
@@ -51,6 +51,7 @@
   font-style: italic;
   line-height: 1.11;
   color: #0d0d0d;
+  margin-top: 15px;
   &:before{
     position: absolute;
     width: 128px;
@@ -60,8 +61,12 @@
     background-image: url(/img/igor.jpg);
     content: '';
     left: -140px;
-    top: -20px;
+    top: -25px;
   }
+}
+
+.essence__name-description{
+  padding-top: 10px;
 }
 
 .essence__name-social-link{
@@ -78,7 +83,7 @@
   font-size: 16px;
   line-height: 1.5;
   text-align: left;
-  padding-top: 15px;
+  padding-top: 3px;
 }
 
 .essence__list{
@@ -101,6 +106,9 @@
     content: '';
     display: block;
   }
+}
+.essence__buttn{
+  padding: 9px 63px;
 }
 
 @media @mobile-widths-only {
