--- a/less/blocks/experience.less
+++ b/less/blocks/experience.less
@@ -8,7 +8,7 @@
 }
 
 .experience__number {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: "Exo 2", sans-serif;
   font-size: 220px;
   font-weight: bold;
   font-style: italic;
