--- a/less/blocks/format.less
+++ b/less/blocks/format.less
@@ -22,7 +22,7 @@
 }
 
 .format__list {
-  padding-top: 65px;
+  padding-top: 36px;
 }
 
 .format-item__titel {
@@ -38,11 +38,12 @@
   font-family: Arial;
   font-size: 16px;
   text-align: center;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
+  line-height: 1.2;
 }
 
 .format-item__cost {
-  padding-top: 30px;
+  padding-top: 27px;
   font-family: Arial;
   font-size: 16px;
   text-align: center;
