--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -1,5 +1,5 @@
 .get {
-  padding-top: 60px;
+  padding-top: 66px;
   padding-bottom: 80px;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .get-asside__yellow {
-  margin-top: 95px;
+  margin-top: 117px;
   padding-top: 297px;
   position: relative;
   background-color: @yellow-color;
@@ -49,7 +49,7 @@
   //}
   &:after {
     position: absolute;
-    top: -100px;
+    top: -125px;
     content: '';
     background-image: url(/img/get-conrt.jpg);
     height: 392px;
@@ -64,12 +64,12 @@
     line-height: 1.5;
     padding-left: 57px;
     padding-right: 57px;
+    margin-top: 0;
   }
 }
 
 .get-bottom-triangle {
   margin-top: -5px;
-  margin-bottom: 60px;
 }
 
 .get-asside__yellow-description {
