--- a/less/blocks/proposal.less
+++ b/less/blocks/proposal.less
@@ -1,13 +1,16 @@
 .proposal {
-  padding-top: 40px;
-  padding-bottom: 60px;
+  padding-top: 35px;
+  padding-bottom: 55px;
   text-align: center;
+  border-top: 1px solid #95989A;
+  border-bottom: 1px solid #95989A;
+  margin-top: 18px;
   & h2 {
     font-size: 83px;
     line-height: 102px;
   }
   & p {
-    padding-top: 30px;
+    padding-top: 25px;
     width: 80%;
     margin: auto;
     display: block;
