--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -156,8 +156,9 @@
   }
 }
 
-@media @tablet-widths-min and @tablet-widths-max {
+@media @tablet-widths-min {
   .sell{
+    padding-top: 120px;
     padding-bottom: 60px;
     position: relative;
 
@@ -217,5 +218,8 @@
   }
   .sell__numder-subtitle{
     text-align: center;
+  }
+  .sell-footer-item__descriptoin{
+    font-size: 16px;
   }
 }
