--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,5 +1,5 @@
 body {
-  font-family: "Exo-2", "Arial", sans-serif;
+  font-family: "Exo-2", sans-serif;
   background-color: #fff;
   color: #0d0d0d;
   line-height: 1.5;
@@ -15,7 +15,7 @@ h1 {
 }
 
 h2 {
-  font-size: 51px;
+  font-size: 50px;
   line-height: 51px;
   color: #000000;
   font-weight: 900;
@@ -55,6 +55,7 @@ a {
 img {
   max-width: 100%;
   height: auto;
+  border-radius: 5px;
 }
 
 li {
@@ -173,7 +174,7 @@ p {
 }
 
 .subtitle {
-  padding-top: 30px;
+  padding-top: 28px;
   &--bold {
     font-weight: bold;
   }
@@ -181,7 +182,7 @@ p {
 
 .bottom-line {
   position: relative;
-  padding-bottom: 30px;
+  padding-bottom: 28px;
   line-height: 1;
   &:before {
     position: absolute;
