--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -9,8 +9,9 @@
   font-style: italic;
   font-weight: bold;
   font-size: 165px;
+  font-family: "Exo-2", sans-serif;
   &:before {
-    bottom: 0;
+    bottom: 13px;
     left: 0;
     content: '';
     position: absolute;
@@ -18,6 +19,7 @@
     width: 100%;
     height: 9px;
     background-color: @yellow-color;
+    border-radius: 5px;
   }
 }
 
