--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -1,17 +1,19 @@
 .audience {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  padding-top: 72px;
+  padding-bottom: 45px;
+  width: 94%;
+  margin-left: 3%;
+  margin-right: 3%;
   background-color: #EFEFEF;
   position: relative;
+  border-radius: 5px;
   &:before {
     position: absolute;
     display: block;
     content: 'А вот, как мы с ней работаем!';
-    bottom: -36px;
-    right: 350px;
+    font-style: italic;
+    bottom: -46px;
+    right: 290px;
     color: #0D0D0D;
     font-size: 16px;
   }
@@ -19,12 +21,12 @@
     position: absolute;
     display: block;
     content: '';
-    bottom: -130px;
-    right: 510px;
+    bottom: -177px;
+    right: 460px;
     background-image: url("/img/icons/bottom-row.svg");
     background-size: cover;
-    width: 97px;
-    height: 80px;
+    width: 140px;
+    height: 130px;
   }
   & img {
     display: block;
@@ -35,6 +37,9 @@
 
 .audience__title {
   margin: 0;
+  font-size: 38px;
+  font-weight: normal;
+  line-height: 1;
 }
 
 @media @mobile-widths-only {
