--- a/less/blocks/chains-stores.less
+++ b/less/blocks/chains-stores.less
@@ -1,5 +1,5 @@
 .chains-stores {
-  padding-top: 191px;
+  padding-top: 188px;
   position: relative;
   &:before {
     position: absolute;
@@ -9,22 +9,24 @@
     top: 91px;
     left: 3%;
     background-color: #EFEFEF;
-    height: 66%;
+    height: 63%;
     border-radius: 5px;
   }
 }
 
-.chains-stores__top{
+.chains-stores__top {
   padding-bottom: 30px;
 }
+
 .chains-stores__opening {
-  padding-top: 20px;
-  font-family: Arial;
+  padding-top: 22px;
+  font-family: @arial;
   font-size: 22px;
   font-style: italic;
   line-height: 1.32;
   text-align: center;
-  padding-right: 80px;
+  width: 80%;
+  margin: auto;
 }
 
 .chains-stores__video {
