--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -14,12 +14,12 @@
   background-color: #EFEFEF;
   border-radius: 3px;
 }
-.qote__subtitle{
+.essence__qote-subtitle{
   font-family: @arial;
   font-size: 16px;
   font-style: italic;
   color: #868686;
-  padding-top: 15px;
+  padding-top: 10px;
   padding-left: 20px;
 }
 .essence__video{
@@ -28,8 +28,8 @@
 .essence__video-lint{
   position: absolute;
   display: block;
-  bottom: 50px;
-  left: 220px;
+  bottom: 64px;
+  left: 210px;
   width: 300px;
   font-size: 18px;
   font-weight: bold;
@@ -66,7 +66,7 @@
 }
 
 .essence__name-description{
-  padding-top: 10px;
+  padding-top: 2px;
 }
 
 .essence__name-social-link{
@@ -83,7 +83,8 @@
   font-size: 16px;
   line-height: 1.5;
   text-align: left;
-  padding-top: 3px;
+  padding-top: 9px;
+  width: 96%;
 }
 
 .essence__list{
@@ -107,8 +108,10 @@
     display: block;
   }
 }
-.essence__buttn{
-  padding: 9px 63px;
+.essence__btn{
+  padding: 7px 63px;
+  font-weight: 900;
+  font-family: @exo;
 }
 
 @media @mobile-widths-only {
