--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,12 +1,13 @@
 .page-footer{
-  margin-top: 100px;
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-top: 70px;
+  margin-bottom: 30px;
+  width: 94%;
+  margin-left: 3%;
+  margin-right: 3%;
   bottom: 0;
   top: 0;
   background-color:#EFEFEF;
-  padding: 70px 0;
+  padding: 68px 0;
   border-radius: 5px;
   color: #4A4A4A;
   font-size: 16px;
@@ -14,6 +15,9 @@
     color: #4A4A4A;
     border-bottom: 1px solid #3c3c3c;
   };
+}
+.page-footer__development{
+  padding-left: 52px;
 }
 @media @tablet-widths-min and @tablet-widths-max {
   .page-footer {
