--- a/less/blocks/format.less
+++ b/less/blocks/format.less
@@ -1,24 +1,27 @@
 .format {
-  padding-top: 130px;
+  padding-top: 135px;
 }
 
 .format-number {
   font-size: 198px;
   font-weight: 900;
   font-style: italic;
-  line-height: 1;
+  line-height: 188px;
   text-align: left;
+  font-family: @exo;
   color: #ffe200;
   text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.7);
   margin-top: -30px
 }
 
 .format-number-subtitle {
-  font-family: Arial;
+  font-family: @arial;
   font-size: 27px;
   font-style: italic;
   line-height: 1;
   color: #0d0d0d;
+  text-align: center;
+  padding-top: 15px;
 }
 
 .format__list {
@@ -27,7 +30,6 @@
 
 .format-item__titel {
   font-size: 25px;
-  font-weight: 800;
   font-style: italic;
   line-height: 1.76;
   text-align: center;
@@ -35,11 +37,11 @@
 }
 
 .format-item__subtitle {
-  font-family: Arial;
+  font-family: @arial;
   font-size: 16px;
-  text-align: center;
   padding-bottom: 15px;
   line-height: 1.2;
+  text-align: center;
 }
 
 .format-item__cost {
