--- a/less/blocks/get.less
+++ b/less/blocks/get.less
@@ -19,34 +19,16 @@
   }
 }
 
+.get__word-success{
+  padding-top: 20px;
+}
+
 .get-asside__yellow {
   margin-top: 117px;
   padding-top: 297px;
   position: relative;
   background-color: @yellow-color;
   border-radius: 0 0 5px 5px;
-
-  //&:before {
-  //  position: absolute;
-  //  bottom: 0;
-  //  content: '';
-  //  left: 5px;
-  //  right: 5px;
-  //  display: block;
-  //  background-image: url("/img/bottom-triangle.png");
-  //
-  //}
-  //&:before {
-  //  position: absolute;
-  //  bottom: -58px;
-  //  content: '';
-  //  left: 5px;
-  //  right: 5px;
-  //  display: block;
-  //  border-left: 170px solid transparent;
-  //  border-right: 170px solid transparent;
-  //  border-top: 58px solid @yellow-color;
-  //}
   &:after {
     position: absolute;
     top: -125px;
