--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -11,9 +11,10 @@
 
 .page-header-title {
   font-size: 63px;
-  font-family: "Panton", sans-serif;;
+  font-family: "Panton", sans-serif;
   font-weight: 900;
   font-style: italic;
+  padding-top: 5px;
 }
 
 .page-header__logo {
@@ -72,7 +73,7 @@
   font-style: italic;
   line-height: 1.2;
   color: #fff;
-  padding-top: 30px;
+  padding-top: 26px;
   width: 82%;
   font-family: @exo;
 }
