--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -1,8 +1,12 @@
+.plan{
+  padding-top: 10px;
+}
+
 .plan__top-wrapper {
   text-align: center;
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  width: 94%;
+  margin-left: 3%;
+  margin-right: 3%;
   background-color: @yellow-color;
   border-radius: 5px;
   padding-top: 80px;
@@ -32,7 +36,7 @@
 }
 
 .plan__subtitle {
-  margin-top: 19px;
+  margin-top: 10px;
   font-size: 30px;
   line-height: 1.5;
   font-family: @exo;
