--- a/less/blocks/presentation.less
+++ b/less/blocks/presentation.less
@@ -1,11 +1,11 @@
 .presentation {
-  padding-bottom: 80px;
-  padding-top: 80px;
+  padding-bottom: 88px;
+  padding-top: 95px;
   position: relative;
   &:before {
     position: absolute;
-    left: 10%;
-    right: 10%;
+    left: 3%;
+    right: 3%;
     top: 0;
     bottom: 0;
     background-color: #EFEFEF;
@@ -15,7 +15,7 @@
 }
 
 .presentation__list {
-  padding-top: 50px;
+  padding-top: 55px;
 }
 
 .presentation__img {
@@ -28,16 +28,18 @@
     position: absolute;
     content: '';
     width: 23px;
-    height: 36px;
+    height: 25px;
     left: 50%;
     top: 50%;
     background: url("/img/icons/lock.svg");
     transform: translate(-50%, -50%);
+    background-size: cover;
   }
 }
 
 .presentation__condition {
-  padding-top: 15px;
+  padding-top: 3px;
+  margin-left: 22px;
 }
 
 @media @mobile-widths-only {
