--- a/less/blocks/profit.less
+++ b/less/blocks/profit.less
@@ -1,9 +1,9 @@
 .profit {
-  padding-top: 90px;
+  padding-top: 104px;
 }
 
 .profit__list {
-  padding-top: 15px;
+  padding-top: 22px;
   padding-left: 30px;
 }
 
@@ -12,6 +12,7 @@
   font-weight: normal;
   font-family: @arial;
   padding-left: 0;
+  padding-bottom: 0;
   & span {
     font-size: 10px;
   }
@@ -21,7 +22,7 @@
 }
 
 .plan__link {
-  margin-top: 15px;
+  margin-top: 22px;
   display: inline-block;
   border-bottom: 1px solid #C7C7C7;
   color: #0D0D0D;
