--- a/less/blocks/slogan.less
+++ b/less/blocks/slogan.less
@@ -1,10 +1,12 @@
 .slogan{
   text-align: center;
-  margin-top: 90px;
+  margin-top: 112px;
   font-size: 80px;
   font-weight: 900;
   font-style: italic;
-  margin-bottom: 100px;
+  margin-bottom: 145px;
+  text-transform: uppercase;
+  font-family: 'Panton', sans-serif;
 }
 .form-btn{
   margin: auto;
