--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -7,11 +7,12 @@
   display: inline-block;
   position: relative;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 165px;
-  font-family: "Exo-2", sans-serif;
+  font-family: @exo;
+  line-height: 220px;
   &:before {
-    bottom: 13px;
+    bottom: 20px;
     left: 0;
     content: '';
     position: absolute;
@@ -29,6 +30,7 @@
   font-size: 24px;
   line-height: 1.29;
   color: #0d0d0d;
+  padding-top: 10px;
 }
 
 .total-earnings__wrapper {
