--- a/less/blocks/appeal.less
+++ b/less/blocks/appeal.less
@@ -1,27 +1,29 @@
 .appeal {
-  padding-top: 80px;
+  padding-top: 35px;
   padding-bottom: 80px;
   background: url("/img/appeal/appeal-bg.jpg");
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 80px;
+  width: 94%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-top: 92px;
   text-align: center;
   border-radius: 5px;
+
 }
 
 .appeal__title {
   text-align: center;
   font-size: 50px;
   line-height: 1;
-  font-weight: bold;
   font-style: italic;
   color: #fff;
   padding-bottom: 60px;
+  font-weight: 900;
+  text-transform: uppercase;
 }
 
 .appeal__subtitle {
-  margin-top: 150px;
+  margin-top: 125px;
   color: #fff;
   font-size: 31px;
   line-height: 1;
