--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,48 +1,65 @@
-.form{
-  margin-top: 90px;
+.form {
+  margin-top: 70px;
 }
-.form-group{
+
+.form-group {
   border-radius: 5px;
 }
-.form-control{
-  padding: 16px 30px;
-  & input{
+
+.form-control {
+  padding: 11px 30px;
+  & input {
     color: #4A4A4A;
     font-size: 16px;
     font-family: @arial;
   }
 }
-.form__description{
+
+.form-group{
+  margin-bottom: 20px;
+}
+
+.form__description {
   margin-top: 90px;
   text-align: center;
 }
+
+.form-btn {
+ width: 100%;
+}
+
 @media @mobile-widths-only {
-  .form{
+  .form {
     margin-left: 15px;
     margin-right: 15px;
   }
+
   .form-control {
     padding: 10px 30px;
   }
-  .form-btn{
+
+  .form-btn {
     padding-left: 0;
     padding-right: 0;
   }
-  .form__description{
+
+  .form__description {
     margin-top: 20px;
   }
 }
 
 @media @tablet-widths-min and @tablet-widths-max {
-  .form{
+  .form {
     margin-left: 15px;
     margin-right: 15px;
     margin-top: 50px;
   }
+
   .form-control {
     padding: 10px 30px;
   }
-  .form__description{
+
+  .form__description {
     margin-top: 0;
   }
 }
