--- a/less/blocks/installation.less
+++ b/less/blocks/installation.less
@@ -5,15 +5,15 @@
   &:before {
     background: url("/img/installation-block/installation-bg.jpg");
     position: absolute;
-    width: 80%;
+    width: 94%;
     top: 0px;
     bottom: 0;
     content: '';
     display: block;
     z-index: -2;
-    left: 10%;
-    right: 10%;
-    border-radius: 5px;
+    left: 3%;
+    right: 3%;
+    border-radius: 10px;
   }
 }
 
@@ -24,44 +24,35 @@
 .installation-top__left-col {
   padding-right: 50px;
   position: relative;
+  padding-bottom: 55px;
   &:before {
     position: absolute;
     display: block;
     content: '';
     width: 2000px;
-    height: 128%;
     z-index: -1;
     right: 60px;
     top: 0;
-    bottom: -51px;
+    bottom: 0;
     border-radius: 5px;
     background-color: @yellow-color;
-
   }
   &:after {
     position: absolute;
     display: block;
     content: '';
     right: 24px;
-    height: 125%;
-    top: 3px;
+    top: 0;
+    bottom: 0;
+    height: 100%;
     width: 40px;
     background-image: url("/img/right-triangle.png");
     background-size: cover;
   }
-  //&:after {
-  //  position: absolute;
-  //  display: block;
-  //  content: '';
-  //  right: 30px;
-  //  height: 125%;
-  //  top: 3px;
-  //  border-top: 119px solid transparent;
-  //  border-left: 30px solid @yellow-color;
-  //  border-bottom: 119px solid transparent;
-  //}
   h3 {
-    max-width: 600px;
+    max-width: 660px;
+    padding-left: 30px;
+    padding-top: 10px;
   }
 }
 
@@ -72,18 +63,35 @@
 }
 
 .installation-bottom {
-  padding-bottom: 80px;
+  padding-bottom: 35px;
   & h4 {
     color: #fff;
+    text-align: center;
+    width: 80%;
+
+    padding-bottom: 20px;
+    min-height: 92px;
+    position: relative;
+    &:before{
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 9%;
+      width: 100%;
+      height: 1px;
+      background-color: rgba(255, 255, 255, .8);
+    }
   }
 }
 
 .installation__list {
   color: #fff;
-
+  padding-top: 14px;
+  padding-left: 15px;
 }
 
 .installation__item {
+  padding-bottom: 0;
   &:before {
     background-color: #fff;
     width: 15px;
