--- a/less/blocks/marketing.less
+++ b/less/blocks/marketing.less
@@ -1,9 +1,13 @@
 .marketing{
-  margin-top: 100px;
+  margin-top: 123px;
   margin-bottom: 100px;
+  & p{
+    padding-top: 0;
+    width: 84%;
+  }
 }
 .marketing__img-wrapper{
-  min-height: 225px;
+  min-height: 213px;
   margin-top: 30px;
   & img{
     margin-left: 30px;
