--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -11,13 +11,17 @@
 }
 
 .sell__numder {
+  padding-top: 15px;
   font-size: 200px;
   font-weight: 900;
   line-height: 1;
   text-align: center;
+  margin-bottom: 18px;
+
   & span {
     font-size: 60px;
     margin-left: -20px;
+    line-height: 1;
   }
 }
 
@@ -74,10 +78,8 @@
   height: 55px;
 }
 
-
-
 @media @mobile-widths-only {
-  .sell{
+  .sell {
     padding-left: 0px;
     padding-right: 0px;
     margin-left: 15px;
@@ -87,11 +89,11 @@
     background-color: #efefef;
     border-radius: 5px;
 
-    & .container{
+    & .container {
       padding-left: 15px;
       padding-right: 15px;
       background-color: inherit;
-      &:before{
+      &:before {
         position: absolute;
         display: none;
         top: 50px;
@@ -105,30 +107,30 @@
         z-index: -1;
       }
     }
-    .sell__right-col{
+    .sell__right-col {
       padding-left: 15px;
       padding-right: 15px;
     }
-    .sell-footer::before{
+    .sell-footer::before {
       display: none;
     }
-    .sell-footer__list{
+    .sell-footer__list {
       padding-left: 15px;
       padding-right: 15px;
     }
-    .sell-footer-item{
+    .sell-footer-item {
       padding-left: 5px;
       padding-right: 5px;
     }
 
-
   }
-  .sell-footer{
+
+  .sell-footer {
     margin-top: 20px;
     z-index: 5;
     position: relative;
     padding-bottom: 20px;
-    &:before{
+    &:before {
       width: 110%;
       left: -5%;
       top: 0;
@@ -139,16 +141,20 @@
       background-color: #f5f5f5;
     }
   }
+
   .sell__right-col {
     padding-left: 60px;
   }
-  .sell-footer__list{
+
+  .sell-footer__list {
     padding-top: 0;
   }
-  .sell-footer__list{
+
+  .sell-footer__list {
     padding-left: 60px;
   }
-  .sell-footer-item{
+
+  .sell-footer-item {
     padding-top: 5px;
     width: 16.6%;
     padding-left: 0;
@@ -157,37 +163,36 @@
 }
 
 @media @tablet-widths-min {
-  .sell{
+  .sell {
     padding-top: 120px;
     padding-bottom: 60px;
     position: relative;
 
-    & .container{
+    & .container {
       padding-left: 15px;
       padding-right: 15px;
-      &:before{
+      &:before {
         position: absolute;
         display: block;
         top: 50px;
         bottom: 0;
         content: '';
-        left: 5%;
-        width: 90%;
+        left: 3%;
+        width: 94%;
         background-color: #efefef;
         border-radius: 5px;
-        box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
         z-index: -1;
       }
     }
 
-
   }
-  .sell-footer{
+
+  .sell-footer {
     margin-top: 20px;
     z-index: 5;
     position: relative;
     padding-bottom: 20px;
-    &:before{
+    &:before {
       width: 110%;
       left: -5%;
       top: 0;
@@ -198,28 +203,49 @@
       background-color: #f5f5f5;
     }
   }
+
   .sell__right-col {
-    padding-left: 60px;
+    padding-left: 48px;
+    & .subtitle {
+      padding-top: 22px;
+    }
   }
-  .sell-footer__list{
-    padding-top: 0;
+
+  .sell-footer__list {
+    padding-left: 55px;
+    padding-top: 25px;
   }
-  .sell-footer__list{
-    padding-left: 60px;
-  }
-  .sell-footer-item{
+
+  .sell-footer-item {
     padding-top: 5px;
     width: 16.6%;
     padding-left: 0;
     padding-right: 0;
   }
-  .page-header__action{
+
+  .page-header__action {
     display: none;
   }
-  .sell__numder-subtitle{
+
+  .sell__numder-subtitle {
     text-align: center;
   }
-  .sell-footer-item__descriptoin{
-    font-size: 16px;
+
+  .sell-footer-item__descriptoin {
+    font-size: 15px;
+    padding-top: 20px;
+  }
+
+  .sell-footer__title {
+    padding-top: 45px;
+    font-family: @exo;
+    font-size: 20px;
+  }
+
+  .sell-footer__site {
+    padding-top: 28px;
+    font-family: @exo;
+    font-weight: 300;
+    letter-spacing: 1px;
   }
 }
