--- a/less/blocks/technologies.less
+++ b/less/blocks/technologies.less
@@ -1,15 +1,21 @@
 .technologies {
-  margin-top: 80px;
-  padding-bottom: 80px;
+  margin-top: 85px;
+  padding-bottom: 65px;
+  & h3 {
+    margin-top: 35px;
+  }
 }
 
 .technologies-aside__title {
-  font-size: 27px;
   font-weight: 900;
   font-style: italic;
   line-height: 2.41;
   text-align: right;
   color: rgba(13, 13, 13, 0.9);
+  font-family: 'Panton', sans-serif;
+  font-size: 28px;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .technologies-aside__subtitle {
@@ -22,8 +28,10 @@
   font-style: italic;
   line-height: 1.25;
   text-align: left;
+
 }
-.technologies__screen-description{
+
+.technologies__screen-description {
   padding-top: 70px;
   font-family: @arial;
   font-size: 16px;
@@ -38,15 +46,16 @@
   padding-top: 15px;
 
 }
-.technologies__screen-link-description{
-  padding-left: 15px;
+
+.technologies__screen-link-description {
+  padding-left: 18px;
   font-family: @arial;
   font-size: 16px;
   font-weight: bold;
   line-height: 1.5;
   text-align: left;
   color: #0d0d0d;
-  & span{
+  & span {
     width: 50%;
     display: block;
     font-size: 13px;
@@ -55,14 +64,16 @@
     text-align: left;
   }
 }
-.technologies__bottom{
-  padding-top: 60px;
+
+.technologies__bottom {
+  padding-top: 30px;
 }
 
-.technolodies__bottom-item{
-  margin-bottom: 30px;
+.technolodies__bottom-item {
+  margin-bottom: 36px;
 }
-.technologies__bottom-title{
+
+.technologies__bottom-title {
   margin-bottom: 0;
   font-family: @arial;
   font-size: 20px;
@@ -71,53 +82,64 @@
   text-align: left;
 }
 
-.technologies__bottom-description{
-  padding-top: 10px;
+.technologies__bottom-description {
+  padding-top: 5px;
   font-family: @arial;
   font-size: 16px;
   line-height: 1.5;
   text-align: left;
 }
+
 @media @tablet-widths-max {
-  .technologies{
+  .technologies {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 50px;
   }
-  .technologies-aside__title{
+
+  .technologies-aside__title {
     font-size: 18px;
   }
-  .technologies-aside__subtitle{
+
+  .technologies-aside__subtitle {
     font-weight: bold;
     padding-right: 15px;
     font-size: 18px;
   }
-  .technologies__screen-description{
+
+  .technologies__screen-description {
     padding-top: 30px;
   }
-  .technologies__screen-link{
+
+  .technologies__screen-link {
     flex-wrap: nowrap;
   }
-  .technologies__screen-link-description{
+
+  .technologies__screen-link-description {
     font-size: 12px;
-    & span{
+    & span {
       font-weight: normal;
     }
   }
-  .technologies__screen-description{
+
+  .technologies__screen-description {
     font-size: 12px;
   }
-  .technologies__bottom{
+
+  .technologies__bottom {
     padding-top: 10px;
   }
-  .technologies__bottom-title{
+
+  .technologies__bottom-title {
     font-size: 15px;
   }
-  .technologies__bottom-description{
+
+  .technologies__bottom-description {
     font-size: 12px;
     padding-top: 5px;
   }
-  .technolodies__bottom-item{
+
+  .technolodies__bottom-item {
     margin-bottom: 10px;
   }
 }
