--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,5 +1,5 @@
 body {
-  font-family: "Exo-2", sans-serif;
+  font-family: @exo;
   background-color: #fff;
   color: #0d0d0d;
   line-height: 1.5;
@@ -15,12 +15,13 @@ h1 {
 }
 
 h2 {
-  font-size: 50px;
+  font-size: 49px;
   line-height: 51px;
   color: #000000;
   font-weight: 900;
   font-style: italic;
   margin: 0;
+  font-family: @exo;
 }
 
 h3 {
@@ -156,10 +157,49 @@ p {
 .mr-15 {
   margin-right: 15px;
 }
+//padding 20px
+.pt-20 {
+  padding-top: 20px;
+}
+
+.pb-20 {
+  padding-bottom: 20px;
+}
+
+.pl-20 {
+  padding-left: 20px;
+}
+
+.pr-20 {
+  padding-right: 20px;
+}
+//end padding 20px
+
+//padding 10px
+.pt-10 {
+  padding-top: 10px;
+}
+
+.pb-10 {
+  padding-bottom: 10px;
+}
+
+.pl-10 {
+  padding-left: 10px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+//end padding 10px
 
 .left-square {
   position: relative;
   padding-left: 30px;
+  &--personal{
+    margin-top: 46px;
+    margin-left: 5px;
+  }
   &:before {
     position: absolute;
     display: block;
@@ -177,6 +217,34 @@ p {
   padding-top: 28px;
   &--bold {
     font-weight: bold;
+  }
+}
+
+.login{
+  &-wrapper{
+    text-align: center;
+  }
+  &-link{
+    text-align: center;
+    color: #0D0D0D;
+    border-bottom: 1px solid rgba(0, 0, 0, .7);
+  }
+}
+
+.icon-thorns{
+  position: relative;
+  //width: 15px;
+  //height: 15px;
+  &:before{
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 36px;
+    height: 29px;
+    background-image: url("/img/icons/thorns.svg");
+    background-size: cover;
   }
 }
 
@@ -203,7 +271,8 @@ p {
   }
 
   &--big-number:before {
-    left: 15px;
+    left: 55px;
+    bottom: 4px;
   }
 }
 
@@ -235,6 +304,7 @@ button {
   font-size: 24px;
   padding-left: 18px;
   padding-bottom: 15px;
+  font-weight: bold;
   &:before {
     position: absolute;
     content: '';
@@ -278,6 +348,7 @@ button {
   font-weight: 900;
   font-style: italic;
   line-height: 1;
+  text-align: center;
 }
 
 .grey-text {
