--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -2,96 +2,82 @@
   font-family: 'rouble';
   font-style: normal;
   font-weight: 400;
-  src: //url('/fonts/rouble.woff') format('woff'),
-    url("/fonts/rouble.ttf") format("truetype");
+  src: url("/fonts/rouble.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Exo-2';
-  font-style: normal;
-  font-weight: 400;
-  src:
-  //  local("Exo-2"),
-  //local("Exo2"),
-  url("/fonts/Exo2.0-Regular.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'Exo-2';
-  font-style: italic;
-  font-weight: 400;
-  src:
-  //  local("Exo-2"),
-  //local("Exo2"),
-  url("/fonts/Exo2.0-Italic.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'Exo-2';
-  font-style: normal;
-  font-weight: 700;
-  src:
-  //  local("Exo-2 Bold"),
-  //local("Exo2-Bold"),
-  url("/fonts/Exo2.0-Bold.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'Exo-2';
-  font-style: italic;
-  font-weight: 700;
-  src:
-  //  local("Exo-2 Bold Italic"),
-  //local("Exo2-Bold-Italic"),
-  url("/fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'Exo-2';
-  font-style: italic;
-  font-weight: 300;
-  src:
-  //  local("Exo-2 Medium Italic"),
-  //local("Exo2-Medium-Italic"),
-  url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'Exo-2';
+  font-family: 'Exo 2';
   font-style: normal;
   font-weight: 300;
-  src:
-    //local("Exo-2 Medium "),
-  //local("Exo2-Medium"),
-  url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+  src: local("Exo-2 Medium "),
+  local("Exo2-Medium"),
   url("/fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Exo-2';
+  font-family: 'Exo 2';
   font-style: italic;
-  font-weight: 900;
-  src:
-  //  local("Exo-2 Black Italic"),
-  //local("Exo2-Medium-Italic"),
-    //url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
-  url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
+  font-weight: 300;
+  src: local("Exo-2 Medium Italic"),
+  local("Exo2-Medium-Italic"),
+  url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Exo-2';
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Exo-2"),
+  local("Exo2"),
+  url("/fonts/Exo2.0-Regular.otf?") format("opentype"),
+  url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Exo 2';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Exo-2"),
+  local("Exo2"),
+  url("/fonts/Exo2.0-Italic.otf?") format("opentype"),
+  url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Exo-2 Bold"),
+  local("Exo2-Bold"),
+  url("/fonts/Exo2.0-Bold.otf?") format("opentype"),
+  url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Exo 2';
+  font-style: italic;
+  font-weight: 700;
+  src: local("Exo-2 Bold Italic"),
+  local("Exo2-Bold-Italic"),
+  url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Exo 2';
   font-style: normal;
   font-weight: 900;
-  src:
-    //local("Exo-2 Black "),
-  //local("Exo2-Black"),
-    //url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+  src: local("Exo-2 Black "),
+  local("Exo2-Black"),
   url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Exo 2';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Exo-2 Black Italic"),
+  local("Exo2-Medium-Italic"),
+  url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -99,7 +85,7 @@
   font-style: italic;
   font-weight: 900;
   src: local("Panton Black Italic"),
-  //local("Panton-Black-Italic"),
-  url("/fonts/Panton-BlackItalic.otf?") format("embedded-opentype");
+  local("Panton-Black-Italic"),
+  url("/fonts/Panton-BlackItalic.otf?") format("opentype");
 }
 
