--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -1,8 +1,10 @@
 .plan{
   padding-top: 10px;
+
 }
 
 .plan__top-wrapper {
+  position: relative;
   text-align: center;
   width: 94%;
   margin-left: 3%;
@@ -50,6 +52,13 @@
   margin-top: -30px;
   margin-bottom: -450px;
   position: relative;
+}
+.plan-bottom-bg{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  z-index: 2;
+  bottom: -47px;
 }
 
 @media @mobile-widths-only {
