--- a/css/style.css
+++ b/css/style.css
@@ -1877,6 +1877,7 @@ button {
   padding-top: 10px;
 }
 .plan__top-wrapper {
+  position: relative;
   text-align: center;
   width: 94%;
   margin-left: 3%;
@@ -1919,6 +1920,13 @@ button {
   margin-top: -30px;
   margin-bottom: -450px;
   position: relative;
+}
+.plan-bottom-bg {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  z-index: 2;
+  bottom: -47px;
 }
 .promotion {
   margin-top: 40px;
